--- a/list-2-3.html
+++ b/list-2-3.html
@@ -214,7 +214,7 @@ $(document).ready(function() {
 </div>
 <div class="other-wrap collapse">
 	  <div class="other box-m">
-	   <div class="desc"><a href="/i.php" target="_blank" title="旅游">路虽远，行则将至；事虽难，做则必成</a>
+	   <div class="desc"><a href="https://linji.cn/i.php" target="_blank" title="旅游">路虽远，行则将至；事虽难，做则必成</a>
 <script>
 var items = document.querySelectorAll('#title a');
 var currentUrl = window.location.href;
@@ -351,7 +351,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2023-02-25 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1027) <a href="/b2/833.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1028) <a href="/b2/833.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -362,7 +362,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2023-02-19 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1071) <a href="/b2/829.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1072) <a href="/b2/829.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -406,7 +406,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2023-01-06 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2697) <a href="/b2/807.html#comments"><i class="iconfont icon-com"></i> 评论(1)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2698) <a href="/b2/807.html#comments"><i class="iconfont icon-com"></i> 评论(1)</a> 
 	 
 	</p></div></div> 
 	 
