--- a/list-2.html
+++ b/list-2.html
@@ -207,7 +207,7 @@ $(document).ready(function() {
 <li><a href="/comment.html">评论</a></li>
 <li><a href="/archives.html">归档</a></li>
 <li><a href="https://p.linji.cn" target="_blank">导航</a></li>
-<li><a href="/file/" target="_blank">网盘</a></li>
+<li><a href="https://linji.cn/file/" target="_blank">网盘</a></li>
 <li><a href="https://jz.linji.cn/" target="_blank">记帐</a></li>
 <li><a href="https://m.linji.cn/" target="_blank">朋友圈</a></li><li><a href="javascript:void(0);" onclick="openLogin1()">登录</a></li>      </ul>   
       </div>
@@ -507,7 +507,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2020-04-18 通过网页 
 	  <span class="ico">顶</span>	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(6822130) <a href="/b2/587.html#comments"><i class="iconfont icon-com"></i> 评论(10)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(6822234) <a href="/b2/587.html#comments"><i class="iconfont icon-com"></i> 评论(10)</a> 
 	 
 	</p></div></div> 
 	 
@@ -518,7 +518,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2025-01-25 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(441) <a href="/b2/1050.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(443) <a href="/b2/1050.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -532,7 +532,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-12-12 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(579) <a href="/b2/994.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(581) <a href="/b2/994.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -548,7 +548,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-11-25 通过手机 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(485) <a href="/b2/991.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(487) <a href="/b2/991.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -559,7 +559,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-09-05 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(767) <a href="/b2/961.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(769) <a href="/b2/961.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -570,7 +570,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-28 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(678) <a href="/b2/951.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(681) <a href="/b2/951.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -581,7 +581,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-28 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(972) <a href="/b2/950.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(974) <a href="/b2/950.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -592,7 +592,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-28 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(677) <a href="/b2/949.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(679) <a href="/b2/949.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -603,7 +603,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-17 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3612) <a href="/b2/943.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3614) <a href="/b2/943.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -614,7 +614,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-16 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1043) <a href="/b2/942.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1045) <a href="/b2/942.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	<div class="pagination">
@@ -1222,7 +1222,5 @@ jQuery(document).ready(function($){
     });
 </script></div>
 
-</body>
-</html>
 </body>
 </html>
